--- a/Project/src/app/view/MainLayout.fxml
+++ b/Project/src/app/view/MainLayout.fxml
@@ -6,18 +6,17 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="410.0" prefWidth="610.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <TabPane prefHeight="375.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <tabs>
                   <Tab text="Home">
                      <content>
-                        <AnchorPane prefHeight="400.0" prefWidth="600.0">
+                        <AnchorPane prefHeight="362.0" prefWidth="600.0">
                            <children>
-                              <LineChart layoutX="37.0" prefHeight="100.0" prefWidth="500.0" AnchorPane.bottomAnchor="210.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="40.0">
+                              <LineChart layoutX="256.0" layoutY="38.0" prefHeight="210.0" prefWidth="329.0" AnchorPane.bottomAnchor="119.0" AnchorPane.leftAnchor="256.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="38.0">
                                 <xAxis>
                                   <CategoryAxis side="BOTTOM" />
                                 </xAxis>
@@ -25,20 +24,17 @@
                                   <NumberAxis side="LEFT" />
                                 </yAxis>
                               </LineChart>
-                              <Label layoutX="26.0" layoutY="209.0" prefHeight="15.0" prefWidth="163.0" text="What you did today" />
-                              <Label layoutX="322.0" layoutY="209.0" prefHeight="15.0" prefWidth="163.0" text="Plan For today" />
-                              <TableView layoutX="14.0" layoutY="238.0" prefHeight="200.0" prefWidth="149.0">
+                              <Label layoutX="70.0" layoutY="14.0" prefHeight="15.0" prefWidth="163.0" text="Plan For today" />
+                              <TableView layoutX="26.0" layoutY="29.0" prefHeight="309.0" prefWidth="207.0" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="373.0" AnchorPane.topAnchor="29.0">
                                 <columns>
-                                  <TableColumn prefWidth="75.0" text="Item" />
-                                  <TableColumn prefWidth="75.0" text="Count" />
+                                  <TableColumn prefWidth="143.0" text="Item" />
+                                  <TableColumn prefWidth="63.0" text="Count" />
                                 </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
                               </TableView>
-                              <TableView layoutX="307.0" layoutY="238.0" prefHeight="200.0" prefWidth="149.0">
-                                 <columns>
-                                    <TableColumn prefWidth="75.0" text="Item" />
-                                    <TableColumn prefWidth="75.0" text="Count" />
-                                 </columns>
-                              </TableView>
+                              <TextField layoutX="347.0" layoutY="280.0" prefHeight="10.0" prefWidth="44.0" />
                            </children>
                         </AnchorPane>
                      </content>
@@ -47,43 +43,34 @@
                      <content>
                         <AnchorPane prefHeight="400.0" prefWidth="600.0">
                            <children>
-                              <SplitPane dividerPositions="0.29797979797979796" layoutX="8.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <SplitPane dividerPositions="0.14046822742474915" layoutX="8.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <items>
+                                    <ScrollPane prefViewportHeight="365.0" prefViewportWidth="174.0">
+                                       <content>
+                                          <ListView id="ActivityList" prefHeight="200.0" prefWidth="80.0" />
+                                       </content>
+                                    </ScrollPane>
                                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                        <children>
-                                          <TableView prefHeight="398.0" prefWidth="175.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                            <columns>
-                                              <TableColumn prefWidth="178.0" text="Plans" />
-                                            </columns>
-                                          </TableView>
-                                       </children>
-                                    </AnchorPane>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                       <children>
-                                          <Label layoutX="15.0" layoutY="7.0" prefHeight="31.0" prefWidth="129.0" text="Detail" />
-                                          <GridPane layoutX="39.0" layoutY="74.0" prefHeight="176.0" prefWidth="329.0">
-                                            <columnConstraints>
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                            </rowConstraints>
-                                          </GridPane>
-                                          <ProgressBar layoutX="92.0" layoutY="38.0" prefWidth="200.0" progress="0.0" />
-                                          <HBox layoutX="210.0" layoutY="354.0">
+                                          <HBox layoutX="336.0" layoutY="325.0">
                                              <children>
                                                 <Button layoutX="192.0" layoutY="340.0" mnemonicParsing="false" text="New" />
                                                 <Button layoutX="247.0" layoutY="340.0" mnemonicParsing="false" text="Delete" />
                                                 <Button layoutX="302.0" layoutY="340.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="53.0" text="Edit" />
                                              </children>
                                           </HBox>
+                                          <SplitPane dividerPositions="0.1428, 0.2856, 0.4284, 0.5714, 0.7142, 0.8571" layoutX="12.0" layoutY="42.0" prefHeight="276.0" prefWidth="490.0">
+                                            <items>
+                                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="274.0" prefWidth="70.0" />
+                                                <AnchorPane prefHeight="200.0" prefWidth="70.0" />
+                                                <AnchorPane prefHeight="200.0" prefWidth="70.0" />
+                                                <AnchorPane prefHeight="200.0" prefWidth="70.0" />
+                                                <AnchorPane prefHeight="200.0" prefWidth="70.0" />
+                                                <AnchorPane prefHeight="274.0" prefWidth="70.0" />
+                                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="70.0" />
+                                            </items>
+                                          </SplitPane>
+                                          <Label layoutX="219.0" layoutY="14.0" text="Weekly Paln" />
                                        </children>
                                     </AnchorPane>
                                 </items>
@@ -94,7 +81,24 @@
                   </Tab>
                   <Tab text="Stat">
                      <content>
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <LineChart layoutX="45.0" layoutY="48.0" prefHeight="297.0" prefWidth="492.0">
+                                <xAxis>
+                                  <CategoryAxis side="BOTTOM" />
+                                </xAxis>
+                                <yAxis>
+                                  <NumberAxis side="LEFT" />
+                                </yAxis>
+                              </LineChart>
+                              <MenuButton layoutX="219.0" layoutY="22.0" mnemonicParsing="false" text="MenuButton">
+                                <items>
+                                  <MenuItem mnemonicParsing="false" text="Action 1" />
+                                  <MenuItem mnemonicParsing="false" text="Action 2" />
+                                </items>
+                              </MenuButton>
+                           </children>
+                        </AnchorPane>
                      </content>
                   </Tab>
                   <Tab text="Share" />
