--- a/Project/src/app/view/MainLayout.fxml
+++ b/Project/src/app/view/MainLayout.fxml
@@ -16,7 +16,7 @@
                      <content>
                         <AnchorPane prefHeight="362.0" prefWidth="600.0">
                            <children>
-                              <LineChart layoutX="256.0" layoutY="38.0" prefHeight="210.0" prefWidth="329.0" AnchorPane.bottomAnchor="119.0" AnchorPane.leftAnchor="256.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="38.0">
+                              <LineChart fx:id="HomePageChart" layoutX="256.0" layoutY="38.0" prefHeight="210.0" prefWidth="329.0" AnchorPane.bottomAnchor="119.0" AnchorPane.leftAnchor="256.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="38.0">
                                 <xAxis>
                                   <CategoryAxis side="BOTTOM" />
                                 </xAxis>
@@ -25,15 +25,20 @@
                                 </yAxis>
                               </LineChart>
                               <Label layoutX="70.0" layoutY="14.0" prefHeight="15.0" prefWidth="163.0" text="Plan For today" />
-                              <TableView layoutX="26.0" layoutY="29.0" prefHeight="309.0" prefWidth="207.0" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="373.0" AnchorPane.topAnchor="29.0">
-                                <columns>
-                                  <TableColumn prefWidth="143.0" text="Item" />
-                                  <TableColumn prefWidth="63.0" text="Count" />
-                                </columns>
-                                 <columnResizePolicy>
-                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                 </columnResizePolicy>
-                              </TableView>
+                              <AnchorPane layoutX="26.0" layoutY="29.0" prefHeight="309.0" prefWidth="207.0">
+                                 <children>
+                                    <TableView fx:id="HomePageTable" prefHeight="338.0" prefWidth="407.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                      <columns>
+                                        <TableColumn fx:id="Item" prefWidth="60.0" text="Item" />
+                                        <TableColumn fx:id="PlanCount" prefWidth="146.0" text="Count1" />
+                                          <TableColumn fx:id="UserCount" prefWidth="146.0" text="Count2" />
+                                      </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                    </TableView>
+                                 </children>
+                              </AnchorPane>
                               <TextField layoutX="347.0" layoutY="280.0" prefHeight="10.0" prefWidth="44.0" />
                            </children>
                         </AnchorPane>
