--- a/Project/src/app/view/MainLayout.fxml
+++ b/Project/src/app/view/MainLayout.fxml
@@ -14,99 +14,24 @@
                <tabs>
                   <Tab text="Home">
                      <content>
-                        <AnchorPane prefHeight="362.0" prefWidth="600.0">
-                           <children>
-                              <LineChart fx:id="HomePageChart" layoutX="256.0" layoutY="38.0" prefHeight="210.0" prefWidth="329.0" AnchorPane.bottomAnchor="119.0" AnchorPane.leftAnchor="256.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="38.0">
-                                <xAxis>
-                                  <CategoryAxis side="BOTTOM" />
-                                </xAxis>
-                                <yAxis>
-                                  <NumberAxis side="LEFT" />
-                                </yAxis>
-                              </LineChart>
-                              <Label layoutX="70.0" layoutY="14.0" prefHeight="15.0" prefWidth="163.0" text="Plan For today" />
-                              <AnchorPane layoutX="26.0" layoutY="29.0" prefHeight="309.0" prefWidth="207.0">
-                                 <children>
-                                    <TableView fx:id="HomePageTable" prefHeight="338.0" prefWidth="407.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                      <columns>
-                                        <TableColumn fx:id="Item" prefWidth="60.0" text="Item" />
-                                        <TableColumn fx:id="PlanCount" prefWidth="146.0" text="Count1" />
-                                          <TableColumn fx:id="UserCount" prefWidth="146.0" text="Count2" />
-                                      </columns>
-                                       <columnResizePolicy>
-                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                       </columnResizePolicy>
-                                    </TableView>
-                                 </children>
-                              </AnchorPane>
-                              <TextField layoutX="347.0" layoutY="280.0" prefHeight="10.0" prefWidth="44.0" />
-                           </children>
-                        </AnchorPane>
+						<fx:include fx:id="Hometab" source="HomeTabLayout.fxml" />
                      </content>
                   </Tab>
                   <Tab text="Plan">
                      <content>
-                        <AnchorPane prefHeight="400.0" prefWidth="600.0">
-                           <children>
-                              <SplitPane dividerPositions="0.14046822742474915" layoutX="8.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                <items>
-                                    <ScrollPane prefViewportHeight="365.0" prefViewportWidth="174.0">
-                                       <content>
-                                          <ListView id="ActivityList" prefHeight="200.0" prefWidth="80.0" />
-                                       </content>
-                                    </ScrollPane>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                       <children>
-                                          <HBox layoutX="336.0" layoutY="325.0">
-                                             <children>
-                                                <Button layoutX="192.0" layoutY="340.0" mnemonicParsing="false" text="New" />
-                                                <Button layoutX="247.0" layoutY="340.0" mnemonicParsing="false" text="Delete" />
-                                                <Button layoutX="302.0" layoutY="340.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="53.0" text="Edit" />
-                                             </children>
-                                          </HBox>
-                                          <SplitPane dividerPositions="0.1428, 0.2856, 0.4284, 0.5714, 0.7142, 0.8571" layoutX="12.0" layoutY="42.0" prefHeight="276.0" prefWidth="490.0">
-                                            <items>
-                                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="274.0" prefWidth="70.0" />
-                                                <AnchorPane prefHeight="200.0" prefWidth="70.0" />
-                                                <AnchorPane prefHeight="200.0" prefWidth="70.0" />
-                                                <AnchorPane prefHeight="200.0" prefWidth="70.0" />
-                                                <AnchorPane prefHeight="200.0" prefWidth="70.0" />
-                                                <AnchorPane prefHeight="274.0" prefWidth="70.0" />
-                                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="70.0" />
-                                            </items>
-                                          </SplitPane>
-                                          <Label layoutX="219.0" layoutY="14.0" text="Weekly Paln" />
-                                       </children>
-                                    </AnchorPane>
-                                </items>
-                              </SplitPane>
-                           </children>
-                        </AnchorPane>
+						<fx:include fx:id="Plantab" source="PlanTabLayout.fxml" />
                      </content>
                   </Tab>
                   <Tab text="Stat">
                      <content>
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
-                           <children>
-                              <LineChart layoutX="45.0" layoutY="48.0" prefHeight="297.0" prefWidth="492.0">
-                                <xAxis>
-                                  <CategoryAxis side="BOTTOM" />
-                                </xAxis>
-                                <yAxis>
-                                  <NumberAxis side="LEFT" />
-                                </yAxis>
-                              </LineChart>
-                              <MenuButton layoutX="219.0" layoutY="22.0" mnemonicParsing="false" text="MenuButton">
-                                <items>
-                                  <MenuItem mnemonicParsing="false" text="Action 1" />
-                                  <MenuItem mnemonicParsing="false" text="Action 2" />
-                                </items>
-                              </MenuButton>
-                           </children>
-                        </AnchorPane>
+                        <fx:include fx:id="StatTab" source="StatTabLayout.fxml" /> 
                      </content>
                   </Tab>
-                  <Tab text="Share" />
+                  <Tab text="Share" >
+                     <content>
+                        <fx:include fx:id="ShareTab"  source="ShareTabLayout.fxml" /> 
+                     </content>
+                  </Tab>
                </tabs>
             </TabPane>
          </children>
