--- a/Project/src/app/view/PlanTabLayout.fxml
+++ b/Project/src/app/view/PlanTabLayout.fxml
@@ -5,40 +5,39 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.ActivityListController">
    <children>
-      <SplitPane dividerPositions="0.14046822742474915" layoutX="18.0" layoutY="10.0" prefHeight="400.0" prefWidth="600.0">
-         <items>
-            <ScrollPane prefViewportHeight="365.0" prefViewportWidth="174.0">
-               <content>
-                  <ListView id="ActivityList" prefHeight="200.0" prefWidth="80.0" />
-               </content>
-            </ScrollPane>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-               <children>
-                  <HBox layoutX="336.0" layoutY="325.0">
-                     <children>
-                        <Button layoutX="192.0" layoutY="340.0" mnemonicParsing="false" text="New" />
-                        <Button layoutX="247.0" layoutY="340.0" mnemonicParsing="false" text="Delete" />
-                        <Button layoutX="302.0" layoutY="340.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="53.0" text="Edit" />
-                     </children>
-                  </HBox>
-                  <SplitPane dividerPositions="0.1428, 0.2856, 0.4284, 0.5714, 0.7142, 0.8571" layoutX="12.0" layoutY="42.0" prefHeight="276.0" prefWidth="490.0">
-                     <items>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="274.0" prefWidth="70.0" />
-                        <AnchorPane prefHeight="200.0" prefWidth="70.0" />
-                        <AnchorPane prefHeight="200.0" prefWidth="70.0" />
-                        <AnchorPane prefHeight="200.0" prefWidth="70.0" />
-                        <AnchorPane prefHeight="200.0" prefWidth="70.0" />
-                        <AnchorPane prefHeight="274.0" prefWidth="70.0" />
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="70.0" />
+		<AnchorPane prefHeight="400.0" prefWidth="600.0">
+         <children>
+              	<SplitPane dividerPositions="0.14046822742474915" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <items>
+                       <ListView fx:id="activityList" prefHeight="200.0" prefWidth="80.0" />
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                               <children>
+                     			 <HBox layoutX="336.0" layoutY="325.0">
+      		                          <children>
+        	                             <Button layoutX="192.0" layoutY="340.0" mnemonicParsing="false" text="New" />
+            	                         <Button layoutX="247.0" layoutY="340.0" mnemonicParsing="false" text="Delete" />
+                	                     <Button layoutX="302.0" layoutY="340.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="53.0" text="Edit" />
+                    		           </children>
+                                 </HBox>
+               	               <SplitPane dividerPositions="0.1428, 0.2856, 0.4284, 0.5714, 0.7142, 0.8571" layoutX="12.0" layoutY="42.0" prefHeight="276.0" prefWidth="490.0">
+                                       <items>
+                                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="274.0" prefWidth="70.0" />
+                                                <AnchorPane prefHeight="200.0" prefWidth="70.0" />
+                                                <AnchorPane prefHeight="200.0" prefWidth="70.0" />
+                                                <AnchorPane prefHeight="200.0" prefWidth="70.0" />
+                                                <AnchorPane prefHeight="200.0" prefWidth="70.0" />
+                                                <AnchorPane prefHeight="274.0" prefWidth="70.0" />
+                                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="70.0" />
+                                            </items>
+                                          </SplitPane>
+                                          <Label layoutX="219.0" layoutY="14.0" text="Weekly Paln" />
+                                       </children>
+                         </AnchorPane>
                      </items>
-                  </SplitPane>
-                  <Label layoutX="219.0" layoutY="14.0" text="Weekly Paln" />
-               </children>
-            </AnchorPane>
-         </items>
-      </SplitPane>
+              	</SplitPane>
+         </children>
+   	 </AnchorPane>
    </children>
 </AnchorPane>
