--- a/Project/src/app/view/PlanTabLayout.fxml
+++ b/Project/src/app/view/PlanTabLayout.fxml
@@ -17,9 +17,9 @@
                                <children>
                      			 <HBox layoutX="672.0" layoutY="558.0" AnchorPane.bottomAnchor="14.0">
       		                          <children>
-        	                             <Button layoutX="192.0" layoutY="340.0" mnemonicParsing="false" text="New" />
-            	                         <Button layoutX="247.0" layoutY="340.0" mnemonicParsing="false" text="Delete" />
-                	                     <Button layoutX="302.0" layoutY="340.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="53.0" text="Edit" />
+        	                             <Button fx:id="editPlanButton" layoutX="192.0" layoutY="340.0" mnemonicParsing="false" onAction="#editPlanButtonClicked" text="Edit" />
+            	                         <Button layoutX="247.0" layoutY="340.0" mnemonicParsing="false" text="Share" />
+                	                     <Button layoutX="302.0" layoutY="340.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="53.0" text="Clear" />
                     		           </children>
                                  </HBox>
                	               <SplitPane dividerPositions="0.1428, 0.2856, 0.4284, 0.5714, 0.7142, 0.8571" layoutX="12.0" layoutY="42.0" prefHeight="276.0" prefWidth="490.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="62.0">
