--- a/Project/src/app/view/PlanTabLayout.fxml
+++ b/Project/src/app/view/PlanTabLayout.fxml
@@ -12,7 +12,12 @@
          <children>
               	<SplitPane dividerPositions="0.14046822742474915" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <items>
-                       <ListView fx:id="activityList" prefHeight="200.0" prefWidth="80.0" />
+                       <!--  <ListView fx:id="activityList" prefHeight="200.0" prefWidth="80.0" /> -->
+                       <TableView fx:id="activityList" prefHeight="200.0" prefWidth="80.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                       		<columns>
+                                     <TableColumn fx:id="nameList" minWidth="-1.0" prefWidth="136.0" text="Activity" />                                
+                            </columns>
+                      </TableView>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                <children>
                      			 <HBox layoutX="672.0" layoutY="558.0" AnchorPane.bottomAnchor="14.0">
