--- a/Project/src/app/view/PlanTabLayout.fxml
+++ b/Project/src/app/view/PlanTabLayout.fxml
@@ -12,7 +12,6 @@
          <children>
               	<SplitPane dividerPositions="0.14046822742474915" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <items>
-                       <!--  <ListView fx:id="activityList" prefHeight="200.0" prefWidth="80.0" /> -->
                        <TableView fx:id="activityList" prefHeight="200.0" prefWidth="80.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                        		<columns>
                                      <TableColumn fx:id="nameList" minWidth="-1.0" prefWidth="136.0" text="Activity" />                                
@@ -115,6 +114,7 @@
                         <Label layoutX="514.0" layoutY="40.0" text="Thursday" AnchorPane.rightAnchor="285.0" AnchorPane.topAnchor="40.0" />
                         <Label layoutX="635.0" layoutY="40.0" text="Friday" AnchorPane.rightAnchor="182.0" AnchorPane.topAnchor="40.0" />
                         <Label layoutX="740.0" layoutY="40.0" text="Saturday" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="40.0" />
+                        <Button fx:id="addActivityButton" layoutY="1.0" mnemonicParsing="false" onAction="#addActivityButtonClicked" text="+" textAlignment="JUSTIFY" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                        </children>
                          </AnchorPane>
                      </items>
