--- a/Project/src/app/view/StatTabLayout.fxml
+++ b/Project/src/app/view/StatTabLayout.fxml
@@ -6,25 +6,28 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.StatTabController">
    <children>
       <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="210.0" prefWidth="210.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <LineChart layoutX="45.0" layoutY="48.0" prefHeight="297.0" prefWidth="492.0">
+         
+            <AreaChart fx:id="areaChart" layoutX="17.0" layoutY="109.0" prefHeight="365.0" prefWidth="622.0">
                <xAxis>
-                  <CategoryAxis side="BOTTOM" />
+                  <CategoryAxis side="BOTTOM" fx:id="xAxis" />
                </xAxis>
                <yAxis>
-                  <NumberAxis side="LEFT" />
+                  <NumberAxis side="LEFT" fx:id="yAxis"/>
                </yAxis>
-            </LineChart>
-            <MenuButton layoutX="219.0" layoutY="22.0" mnemonicParsing="false" text="MenuButton">
+            </AreaChart>
+            
+            <MenuButton layoutX="359.0" layoutY="53.0" mnemonicParsing="false" text="Week Plan">
                <items>
-                  <MenuItem mnemonicParsing="false" text="Action 1" />
-                  <MenuItem mnemonicParsing="false" text="Action 2" />
+                  <MenuItem mnemonicParsing="false" text="Weekly Plan" />
+                  <MenuItem mnemonicParsing="false" text="Monthly Plan" />
                </items>
             </MenuButton>
+            <ComboBox fx:id="planNameBox" layoutX="489.0" layoutY="53.0" prefHeight="26.0" prefWidth="109.0" />
+            
          </children>
       </AnchorPane>
    </children>
